--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nishant-666.github.io/React-weather",
+  "homepage": "http://nishant-666.github.io/React-Veriphone",
   "name": "react-veriphone",
   "version": "0.1.0",
   "private": true,
